--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "8.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "4.10.1",
     "react-loader-spinner": "4.0.0",
     "react-router-dom": "5.2.0"
   },
